--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -5,7 +5,7 @@
   <title>TinyApp</title>
 </head>
 <body>
-  <h2>Your <b>"Tiny"</b> URLs</h2>
+  <h2>Your <em>"Tiny"</em> URLs</h2>
   <ul>
     <% urls.forEach((url) => { %>
       <li><%= url.shortened %> -- <%= url.original %></li>
