--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>TinyApp</title>
 </head>
+<% include partials/_header.ejs %>
 <body>
   <h2>Your <em>"Tiny"</em> URLs</h2>
   <ul>
