--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>TinyApp</title>
 </head>
+<% include partials/_header.ejs %>
 <body>
   <h2>Your <em>"Tiny"</em> URL</h2>
   <p><%= shortURL %> -- <%= origURL %></p>
