Site will now accept a login with a username, store that username in a cookie, and display it at the top of every page.

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -9,8 +9,8 @@
   <h2>Your <em>"Tiny"</em> URL</h2>
   <p><%= shortURL %> -- <%= origURL %></p>
   <p>Should this link to somewhere else?</p>
-  <form method="POST" action="/urls/show">
-    <input id="longURL" type="text" name="<%= shortURL %>" placeholder="http://" style="width: 300px">
+  <form method="POST" action="/urls/<%= shortURL %>">
+    <input type="text" name="<%= shortURL %>" placeholder="http://" style="width: 300px">
     <input type="submit" value="Update">
   </form>
 </body>
