--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,3 +1,12 @@
 <header>
   <h1><strong>TinyApp</strong></h1>
+  <div>
+    <form style="display:inline-block;" method="POST" action="/submit">
+      <input id="username" type="text" name="username">
+      <input type="submit" value="Login">
+    </form>
+    <p style="display:inline-block;">
+    -- Welcome, <%= username %>!
+    </p>
+  </div>
 </header>
