--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,12 +1,16 @@
 <header>
   <h1><strong>TinyApp</strong></h1>
-  <div>
-    <form style="display:inline-block;" method="POST" action="/submit">
-      <input id="username" type="text" name="username">
-      <input type="submit" value="Login">
-    </form>
-    <p style="display:inline-block;">
-    -- Welcome, <%= username %>!
-    </p>
-  </div>
+    <% if (!username) { %>
+      <form method="POST" action="/login">
+        <input id="username" type="text" name="username">
+        <input type="submit" value="Login">
+      </form>
+    <% } else { %>
+      <p style="display:inline-block;">
+      Welcome, <%= username %>!
+      </p>
+      <form method="POST" action="/logout" style="display:inline-block; padding-left:10px;">
+        <input type="submit" value="Logout">
+      </form>
+    <% }; %>
 </header>
