--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,13 +1,13 @@
 <header>
   <h1><strong>TinyApp</strong></h1>
-    <% if (!username) { %>
+    <% if (!user_id) { %>
       <form method="POST" action="/login">
-        <input id="username" type="text" name="username">
+        <input type="text" name="user_id">
         <input type="submit" value="Login">
       </form>
     <% } else { %>
       <p style="display:inline-block;">
-      Welcome, <%= username %>!
+      Welcome, <%= user_id.id %>!
       </p>
       <form method="POST" action="/logout" style="display:inline-block; padding-left:10px;">
         <input type="submit" value="Logout">
