Setup login page that will only allow for login of those users in the database. All other attempts receive errors.

--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -6,13 +6,13 @@
 </head>
 <body>
   <% include partials/_header.ejs %>
-  <h3>Register for an account:</h3>
-  <form method="POST" action="/register">
+  <h3>Enter your email and password below to sign in.</h3>
+  <form method="POST" action="/login">
     <label for="email">Email Address:</label>
     <input type="email" name="email" id="email" style="display:block; margin-bottom:10px;">
-    <label for="password">Choose a password:</label>
+    <label for="password">Password:</label>
     <input type="password" name="password" id="password" style="display:block;">
-    <input type="submit" value="Submit" style="display:block; margin-top:10px;">
+    <input type="submit" value="Sign In" style="display:block; margin-top:10px;">
   </form>
 </body>
 </html>
