--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -4,12 +4,16 @@
   <meta charset="UTF-8">
   <title>TinyApp</title>
 </head>
-<body style="font-size:20px; padding:50px;">
-  <% include partials/_header.ejs %>
-  <form action="/urls" method="POST" style="margin:150px;"
+<body>
+  <div>
+    <% include partials/_header.ejs %>
+  </div>
+  <div style="font-size:20px; padding:20px;">
+  <form action="/urls" method="POST" style="margin:50px;"
     <label for="longURL">Enter a URL:</label>
     <input type="text" name="longURL" placeholder="http://" style="width: 300px">
     <input type="submit" value="Submit">
   </form>
+  </div>
 </body>
 </html>
