--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -8,10 +8,12 @@
   <% include partials/_header.ejs %>
   <h2>Your <em>"Tiny"</em> URL</h2>
   <p><%= shortURL %> -- <%= origURL %></p>
-  <p>Should this link to somewhere else?</p>
-  <form method="POST" action="/urls/<%= shortURL %>">
-    <input type="text" name="<%= shortURL %>" placeholder="http://" style="width: 300px">
-    <input type="submit" value="Update">
-  </form>
+  <% if (user_id) { %>
+    <p>Should this link to somewhere else?</p>
+    <form method="POST" action="/urls/<%= shortURL %>">
+      <input type="text" name="<%= shortURL %>" placeholder="http://" style="width: 300px">
+      <input type="submit" value="Update">
+    </form>
+  <% } %>
 </body>
 </html>
