--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -6,6 +6,7 @@
 </head>
 <body>
   <% include partials/_header.ejs %>
+  <!-- Login form with email and password -->
   <h3>Enter your email and password below to sign in.</h3>
   <form method="POST" action="/login">
     <label for="email">Email Address:</label>
