--- a/views/urls_new.ejs
+++ b/views/urls_new.ejs
@@ -8,6 +8,7 @@
   <div>
     <% include partials/_header.ejs %>
   </div>
+  <!-- Form to submit new URL -->
   <div style="font-size:20px; padding:20px;">
   <form action="/urls" method="POST" style="margin:50px;"
     <label for="longURL">Enter a URL:</label>
