--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -6,6 +6,7 @@
 </head>
 <body>
   <% include partials/_header.ejs %>
+  <!-- Form to register for an account using email and password -->
   <h3>Register for an account:</h3>
   <form method="POST" action="/register">
     <label for="email">Email Address:</label>
