--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -7,15 +7,20 @@
 <body>
   <% include partials/_header.ejs %>
   <h2>Your <em>"Tiny"</em> URLs</h2>
+  <!-- If there are elements in the URL array, display all URLS custom to user as well as a "Create New" link -->
   <% if (urls[0]) { %>
     <ul>
       <% for (let object in urls) { %>
-        <li><form method="POST" action="/urls/<%= urls[object].shortURL %>/delete"><%= urls[object].shortURL %> -- <%= urls[object].longURL %> -- <a href="/urls/<%= urls[object].shortURL %>/">Edit</a> -- <input type="submit" value="Delete"></form></li>
+      <!-- Delete button followed by shortened URL and long URL -->
+        <li><form method="POST" action="/urls/<%= urls[object].shortURL %>/delete"><a href="/u/<%= urls[object].shortURL %>"><%= urls[object].shortURL %></a> -- <%= urls[object].longURL %> -- <a href="/urls/<%= urls[object].shortURL %>/">Edit</a> -- <input type="submit" value="Delete"></form></li>
       <% }; %>
     </ul>
+    <p style="padding-top:20px;"><a href="/urls/new">Create a new "Tiny" URL?</a></p>
+  <!-- If user is not logged in, then display a message to sign in or register -->
   <% } else if (!user_id) { %>
     <p>Hey there! It seems you haven't logged in or registered with us.</p>
     <p>Please use one of the links at the top of the page to get started. :)</p>
+  <!-- If user is logged in but has no URLs, then displays message with link to create one -->
   <% } else { %>
     <p>Looks like you haven't created any "Tiny" URLs yet! Why not make one <a href="/urls/new">now?</a></p>
   <% }; %>
