--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -12,7 +12,7 @@
   <!-- If the user is logged in and the URL exists, then it displays a form to update the URL -->
   <% if (user_id && exists) { %>
     <p>Should this link to somewhere else?</p>
-    <form method="POST" action="/urls/<%= shortURL %>">
+    <form method="POST" action="/urls/<%= shortURL %>?_method=PUT">
       <input type="text" name="<%= shortURL %>" placeholder="http://" style="width: 300px">
       <input type="submit" value="Update">
     </form>
